--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-
+.idea
 # C extensions
 *.so
 
@@ -59,4 +59,4 @@ target/
 # Others
 start.sh
 .avoscloud/
-.avoscloud/
+
